FixingBugs/StylingEdits/ClaimScrollbar/ClaimMobileView

--- a/src/App.css
+++ b/src/App.css
@@ -1485,7 +1485,7 @@ table, th, td {
   box-sizing: border-box;
   width: 16px;
 	height: 16px;	
-  border: 2px solid #936CE6;
+  border: 2px solid #555555;
   border-radius: 50%;
   border-left-color: transparent;
   border-bottom-color: transparent;
